--- a/pages/ourFactoryDetail/ourFactoryDetail.scss
+++ b/pages/ourFactoryDetail/ourFactoryDetail.scss
@@ -1,5 +1,10 @@
 /* pages/ourFactoryDetail/ourFactoryDetail.wxss */
 #ourFactoryDetail {
+	.checkbox-index--van-checkbox__icon--checked {
+    background-color: #27a2fd;
+    border-color: #27a2fd;
+	}
+
   .active {
     color: #27a2fd;
     border-bottom: 2px solid #27a2fd;
