--- a/pages/billingManagement/paymentDocument/paymentDocument.wxml
+++ b/pages/billingManagement/paymentDocument/paymentDocument.wxml
@@ -14,7 +14,7 @@
 				hide-label="{{true}}" />
 		</view>
 		<view class="flex jcsb fz25 bgColorWhite" style="height: 48px;border-bottom: 1px solid #eaeaea;">
-			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '关联客户'}}
+			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '关联单位'}}
 				<van-icon class="ml5 pt5" name="arrow-down" />
 			</view>
 			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="date">{{dateName || '创建时间'}}
