--- a/pages/billingManagement/oppositeInvoicing/oppositeInvoicing.wxml
+++ b/pages/billingManagement/oppositeInvoicing/oppositeInvoicing.wxml
@@ -14,7 +14,7 @@
 				hide-label="{{true}}" />
 		</view>
 		<view class="flex jcsb fz25 bgColorWhite" style="height: 48px;border-bottom: 1px solid #eaeaea;">
-			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '关联客户'}}
+			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '关联单位'}}
 				<van-icon class="ml5 pt5" name="arrow-down" />
 			</view>
 			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="date">{{dateName || '创建时间'}}
@@ -22,8 +22,18 @@
 			</view>
 		</view>
 		<view class="flex jcsb" style="padding: 10px;">
-			<view>开票金额</view>
-			<view class="color03d0 bold">{{additional.total_price || 0}} 万元</view>
+			<view class="w30">
+				<view>开票金额</view>
+				<view class="color03d0 bold">{{additional.total_price || 0}} 万元</view>
+			</view>
+			<view class="w30">
+				<view>不含税金额</view>
+				<view class="color03d0 bold">{{additional.total_price_no_tax || 0}} 万元</view>
+			</view>
+			<view class="w30">
+				<view>税额合计</view>
+				<view class="color03d0 bold">{{additional.total_price_tax || 0}} 万元</view>
+			</view>
 		</view>
 	</view>
 
@@ -52,11 +62,19 @@
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">开票金额：</view>
-				<view class="color03d0">{{item.price}}</view>
+				<view class="color03d0">{{item.price || '0.00'}}元</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">开票金额：</view>
 				<view class="color03d0">{{item.priceChinese}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">不含税金额：</view>
+				<view class="color03d0">{{item.price_no_tax || '0.00'}}元</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">税额：</view>
+				<view class="color03d0">{{item.price_tax || '0.00'}}元</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">发票号码 ：</view>
