添加无权限页面更改

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,11 +15,11 @@
 		</view>
 	</view>
 	<!-- 第一次查询无数据 -->
-	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
+	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{userInfo.quanxianLen === 0}}">
 		<view class="tc size-xl">
 			<image class="image" src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220216112643.png">
 			</image>
-			<view class="mt20">没有符合条件的数据</view>
+			<view class="mt20">您暂无权限访问页面，请联系管理员添加权限</view>
 		</view>
 	</view>
 	<view wx:if="{{!isLogin}}">
